'
  File "<string>", line 1
    import socket; print('kafka-, socket.gethostbyname('kafka'))
                                                             ^
SyntaxError: unterminated string literal (detected at line 1)
